test/tests/compiler/7_compound_statements/invalid_parse/missing_semicolon.plx
pub fn main(none) i32 {
    a: i32 = 4
    {   a = 5
        return } a
}
